[package]
name = "esch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esch"
path = "cli/src/main.rs"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
clap = { version = "4.5.18", features = ["derive"] }
ctrlc = "3.4.5"
notify = "6.1.1"
typst = "0.11.1"
