[tool.poetry]
name = "esch"
version = "0.6.0"
description = "esch (v.) : to turn matricies into high quality svg (animations)"
authors = ["Noah Syrkis <noah@syrkis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
svgwrite = "^1.4.3"
tqdm = "^4.66.5"
ipython = "^8.29.0"
darkdetect = "^0.8.0"
matplotlib = "^3.9.2"
jax = "^0.4.35"
chex = "^0.1.87"
jaxtyping = "^0.2.36"
einops = "^0.8.0"
svglib = "^1.5.1"
jupyterlab = "^4.3.3"
ipywidgets = "^8.1.5"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
