[project]
name = "esch"
version = "0.0.18"
description = "esch (v.) : to turn matricies into high quality svg (animations)"
authors = [{ name = "Noah Syrkis", email = "noah@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "svgwrite>=1.4.3,<2",
    "tqdm>=4.66.5,<5",
    "ipython>=8.29.0,<9",
    "darkdetect>=0.8.0,<0.9",
    "matplotlib>=3.9.2,<4",
    "chex>=0.1.87,<0.2",
    "jaxtyping>=0.2.36,<0.3",
    "einops>=0.8.0,<0.9",
    "svglib>=1.5.1,<2",
    "jupyterlab>=4.3.3,<5",
    "ipywidgets>=8.1.5,<9",
    "pdf2image>=1.17.0,<2",
    "jax>=0.6.0,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
